# WorkMemory-v3

./: 01_ARCHITECTURAL_DECISIONS.md  02_DATA_MODEL.md  03_CORE_ARCHITECTURE.md  04_UI_SPEC.md  05_INTERACTION.md  06_DESIGN_GOVERNANCE.md  07_ROADMAP.md  08_AI_PROMPTS.md  09_PRODUCT_ACCEPTANCE_LEDGER.md  10_DEVELOPMENT_GUIDE.md  11_TESTING_STRATEGY.md  CHANGELOG.md  README.md  analysis_results.md
.github/workflows/: ci.yml
.trae/documents/: windows-build-hardening-plan.md
.trae/specs/audit-v4-hardening/: checklist.md  spec.md  tasks.md
doc/: 00_PRODUCT_VISION.md  02_DATA_MODEL.md  03_CORE_ARCHITECTURE.md  04_UI_SPEC.md  10_DEVELOPMENT_GUIDE.md
pet/1/: pet.json
pet/2/: pet.json
pet/3/: pet.json
pet/8/: pet.json
pet/9/: pet.json
workmemory-app/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
workmemory-app/src/: App.tsx  main.tsx
workmemory-app/src-tauri/: Cargo.toml  tauri.conf.json
workmemory-app/src-tauri/capabilities/: default.json
workmemory-app/src-tauri/icons/: README.md  icon.icns
workmemory-app/src-tauri/resources/pet/4/: pet.json
workmemory-app/src-tauri/resources/pet/5/: pet.json
workmemory-app/src-tauri/resources/pet/6/: pet.json
workmemory-app/src-tauri/resources/pet/7/: pet.json
workmemory-app/src-tauri/src/: lib.rs  main.rs  models.rs
workmemory-app/src-tauri/src/core/: achievement_engine.rs  analytics_engine.rs  capture.rs  data_port.rs  distill.rs  embedding.rs  error.rs  event_bus.rs  focus_engine.rs  mascot.rs  mod.rs  ocr.rs  pet_engine.rs  report.rs  scheduler.rs  soundscape_engine.rs  task_engine.rs  uia.rs  url_util.rs  validator.rs
workmemory-app/src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  repository.rs  repository_tests.rs
workmemory-app/src-tauri/src/ipc/: commands.rs  events.rs  mod.rs
workmemory-app/src/i18n/: en-US.ts  (+3 more)
(+105 files in other folders)
